# codesrepo

./: .gitignore  README.md
C++/Computational Geometry/: IntPoint.cpp  Point.cpp
C++/ObjPointClound/: CMakeLists.txt  README.md
C++/ObjPointClound/src/: Camera.cpp  Camera.h  main.cpp
C++/PL/: FastIO.cpp  ReadProcess.cpp  UOJ98(2).cpp  UOJ98.cpp
C++/String/: ACauto(MapIdxCompressed).cpp  ACauto.cpp  BoyerMooreStrongGoodHeuristic.cpp  ELFHash.cpp  Suffix Array.cpp  UsingTwoHeuristic.cpp  Z algorithm.cpp  sais.cpp
bat/: escape_command.bat  parameter_set_and_process.bat
front_end_web/css_templates/input/: input_with_autofill_config.scss
front_end_web/default-html-css-js-config/: index.html
front_end_web/default-html-css-js-config/css/: style.css
front_end_web/html_template_test/: README.md  index.html
front_end_web/html_template_test/js/: script.js
front_end_web/intersection_observer_api_test/: README.md  index.html
front_end_web/intersection_observer_api_test/css/: style.css
front_end_web/intersection_observer_api_test/js/: script.js
latex/simple_template/: README.md  simple.tex
maven/: mvn_compile.bat  mvn_init_batch_mode.bat  mvn_package.bat  mvn_test.bat
